# DeFiVaultStbhck

./: .gitignore  AGENT.md  README.md  SUBMISSION.md  docker-compose.yml
.github/workflows/: ci.yml
anchor/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
anchor/programs/compliance_oracle/: Cargo.toml
anchor/programs/compliance_oracle/src/: lib.rs
anchor/programs/kyc_registry/: Cargo.toml
anchor/programs/kyc_registry/src/: lib.rs
anchor/programs/vault/: Cargo.toml
anchor/programs/vault/src/: lib.rs
anchor/tests/: kyc_registry.ts  vault.ts
backend/: .env.example  .env.test  Dockerfile  jest.config.js  package-lock.json  package.json  railway.toml  tsconfig.json
backend/prisma/: README.md  schema.prisma
backend/src/: config.ts  index.ts
backend/src/__tests__/: e2e.compliance.test.ts
backend/src/lib/: seed.ts  solana.ts
backend/src/middleware/: auth.ts  requireKyc.ts
backend/src/middleware/__tests__/: auth.test.ts  (+1 more)
backend/src/routes/: auth.ts  compliance.ts  health.ts  kyc.ts  vault.ts
backend/src/types/: express.d.ts
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/vault/: page.tsx
frontend/components/: AppNav.tsx  AuditLogTable.tsx  ComplianceAlert.tsx  KycStatusBadge.tsx  TransactionModal.tsx  WalletConnect.tsx  WalletProviderWrapper.tsx
frontend/lib/: api.ts  auth.ts  store.ts
scripts/: demo.sh  deploy.sh
(+10 files in other folders)
